--- a/src/Interface/DisposeVuelos.form
+++ b/src/Interface/DisposeVuelos.form
@@ -147,6 +147,9 @@
         <Component class="javax.swing.JButton" name="btnEliminarVuelo">
           <Properties>
             <Property name="text" type="java.lang.String" value="ELIMINAR VUELO"/>
+            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+              <Color id="Hand Cursor"/>
+            </Property>
           </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnEliminarVueloMouseClicked"/>
